# xfce4-rss-plugin

./: ChangeLog  configure.ac.in
panel-plugin/: Makefile.am  __init__.py  config.py  globals.py  globals.py.in  plugin.py  props.py  rss.desktop.in.in  xfce4-rss-plugin.py
po/: ChangeLog  LINGUAS  ar.po  ast.po  bg.po  ca.po  cs.po  de.po  el.po  en_AU.po  es.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  is.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  ms.po  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sq.po  sr.po  sv.po  tr.po  ug.po  (+4 more)
